syntax = "proto3";
option go_package = "github.com/kralicky/opni-gateway/pkg/management";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
package management;

service Management {
  rpc CreateBootstrapToken(CreateBootstrapTokenRequest) returns (BootstrapToken) {}
  rpc RevokeBootstrapToken(RevokeBootstrapTokenRequest) returns (google.protobuf.Empty) {}
  rpc ListBootstrapTokens(ListBootstrapTokensRequest) returns (ListBootstrapTokensResponse) {}
  rpc ListTenants(google.protobuf.Empty) returns (ListTenantsResponse) {}
  rpc CertsInfo(google.protobuf.Empty) returns (CertsInfoResponse) {}
}

message CreateBootstrapTokenRequest {
  google.protobuf.Duration TTL = 1;
}

message RevokeBootstrapTokenRequest {
  string TokenID = 1;
}

message BootstrapToken {
  bytes TokenID = 1;
  bytes Secret = 2;
  int64 LeaseID = 3;
  int64 TTL = 4;
}

message ListBootstrapTokensRequest {
}

message ListBootstrapTokensResponse {
  repeated BootstrapToken Tokens = 1;
}

message Tenant {
  string ID = 1;
}

message ListTenantsResponse {
  repeated Tenant Tenants = 1;
}

message CertsInfoResponse {
  repeated CertInfo Chain = 1;
}

message CertInfo {
  string Issuer = 1;
  string Subject = 2;
  bool IsCA = 3;
  string NotBefore = 4;
  string NotAfter = 5;
  bytes SPKIHash = 6;
}